--- a/src/app/modules/docente-capacitador/edit-dts-docentes/pages/edit-dts-docentes/edit-dts-docentes.component.html
+++ b/src/app/modules/docente-capacitador/edit-dts-docentes/pages/edit-dts-docentes/edit-dts-docentes.component.html
@@ -48,7 +48,8 @@
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputCedula"
-                                        placeholder="Ingrese su cedula" name="cedula" [(ngModel)]="persona.cedula">
+                                        placeholder="Ingrese su cedula" name="cedula" [(ngModel)]="persona.cedula"
+                                        (blur)="validarInputCedula()" maxlength="10" >
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -57,7 +58,9 @@
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputNombre"
-                                        placeholder="Ingrese su nombre" name="nombre" [(ngModel)]="persona.nombre">
+                                        placeholder="Ingrese su nombre" name="nombre" [(ngModel)]="persona.nombre"
+                                        (keydown)="validarInputNombre()" (input)="convertirPrimeraLetraNombre()" 
+                                        >
                                 </div>
                             </div>
 
@@ -68,7 +71,7 @@
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputApellido"
                                         placeholder="Ingrese su apellido" name="apellido"
-                                        [(ngModel)]="persona.apellido">
+                                        [(ngModel)]="persona.apellido" (keydown)="validarInputApellido()" (input)="convertirPrimeraLetraMayuscula()">
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -78,7 +81,7 @@
                                 <div class="col-sm-9 text-secondary">
                                     <input type="date" class="form-control" id="inputApellido"
                                         placeholder="Ingrese su apellido" name="fecha_nacimiento"
-                                        [(ngModel)]="persona.fecha_nacimiento">
+                                        [(ngModel)]="persona.fecha_nacimiento" [max]="fechaActual" (input)="verificarCamposVacios()">
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -88,7 +91,7 @@
                                 <div class="col-sm-9 text-secondary">
                                     <input type="email" class="form-control" id="inputEmail"
                                         placeholder="Ingrese su correo electrónico" name="email"
-                                        [(ngModel)]="persona.email">
+                                        [(ngModel)]="persona.email" (blur)="validarInputEmail()" (input)="verificarCamposVacios()">
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -98,7 +101,7 @@
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputDireccion"
                                         placeholder="Ingrese su dirección" name="direccion"
-                                        [(ngModel)]="persona.direccion">
+                                        [(ngModel)]="persona.direccion" (input)="verificarCamposVacios()">
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -108,7 +111,7 @@
                                 <div class="col-sm-9 text-secondary">
                                     <input type="tel" class="form-control" id="inputTelefono"
                                         placeholder="Ingrese su teléfono" name="telefono"
-                                        [(ngModel)]="persona.telefono">
+                                        [(ngModel)]="persona.telefono" (keydown)="validarTelf()" maxlength="10" (input)="verificarCamposVacios()"/>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -117,7 +120,8 @@
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="tel" class="form-control" id="inputCelular"
-                                        placeholder="Ingrese su celular" name="celular" [(ngModel)]="persona.celular">
+                                        placeholder="Ingrese su celular" name="celular" [(ngModel)]="persona.celular"
+                                        (keydown)="validarCel()" maxlength="10" (input)="verificarCamposVacios()">
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -126,7 +130,8 @@
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputEtnia"
-                                        placeholder="Ingrese su etnia" name="etnia" [(ngModel)]="persona.etnia">
+                                        placeholder="Ingrese su etnia" name="etnia" [(ngModel)]="persona.etnia"
+                                        (keydown)="validarEtnia()" (input)="verificarCamposVacios()">
                                 </div>
                             </div>
 
@@ -166,13 +171,13 @@
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputEtnia"
-                                        placeholder="Ingrese su etnia" name="etnia" [(ngModel)]="persona.hojavida">
+                                        placeholder="Ingrese su etnia" name="etnia" [(ngModel)]="persona.hojavida" (input)="verificarCamposVacios()">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-sm-3"></div>
                                 <div class="col-sm-9 text-secondary">
-                                    <Span></Span> <button (click)="onSubmit()">Guardar Cambios</button>
+                                    <Span></Span> <button (click)="onSubmit()" [disabled]="todosCamposVacios">Guardar Cambios</button>
                                     <!-- <Span></Span> <button (click)="mostrarDatos()">Ver datos</button> -->
                                 </div>
                             </div>
