--- a/src/app/modules/docente-capacitador/register-curso/pages/register-curso/register-curso.component.html
+++ b/src/app/modules/docente-capacitador/register-curso/pages/register-curso/register-curso.component.html
@@ -46,21 +46,26 @@
                             <option value="Próximamente">Próximamente</option>
                         </select>
                     </div>
-                    <div class="p-col-3 p-md-4">
-                        <span class="p-float-label">
-                            <input (change)="imageSelected($event)" formControlName="foto" accept="image/*"
-                                name="foto" type="file" class="form-control" id="float-input" required />
-                            <label for="float-input"></label>
-                        </span>
-                        <div *ngIf="file" class="mt-3 text-center">
-                            <img [src]="file" class="rounded" alt="..." style="max-width: 30%;" />
-                        </div>
-                        <div>
-                            <img alt="..."
-                                style="max-width: 30%; visibility: hidden; width: 0px; height: 0px;"
-                                [src]="'http://localhost:5000/image/images/' + cursoSeleccionado.curFoto" />
-                        </div>
-                    </div>
+                    <div class="mb-3">
+                        <label for="photo" class="form-label">Foto</label>
+                        <input
+                          type="file"
+                          #photoInput
+                          class="form-control"
+                          id="photo"
+                          accept="image/*"
+                          (change)="onFileChange($event)"
+                        />
+                      </div>
+                      <div class="mb-3">
+                        <img
+                          *ngIf="imagePreview"
+                          class="img-thumbnail"
+                          [src]="imagePreview"
+                          alt="Previsualización de la foto"
+                          id="preview"
+                        />
+                      </div>
                     <div class="form-group">
                         <label>Seleccione el programa al que pertenece el curso de capacitación:</label>
                         <select class="form-control" (change)="onSelectChangeprogramcap($event.target)">
@@ -167,8 +172,14 @@
                     <td>{{ curso?.programaCapacitacion?.pcaNombre }}</td>
                     <td>{{ curso?.mcursos?.mcuNombre }}</td>
                     <td>{{ curso?.tipoCurso?.tcuNombre }}</td>
-                        <td><img [src]="curso.curFoto" alt="Imagen"></td>
-                      
+                    <td>
+                        <img
+                        [src]="'data:image/jpeg;base64,' + curso.curFoto"
+                        alt="Foto"
+                        class="img-thumbnail"
+                        width="100"
+                      />
+                    </td>
                 </tr>
             </ng-container>
         </tbody>
